about gap fix

--- a/src/sass/blocks/_about-media.scss
+++ b/src/sass/blocks/_about-media.scss
@@ -2,7 +2,7 @@
 
   @media (max-width: 1199px) {
     &__wrapper {
-      gap: 54px;
+      gap: 47px;
     }
     &__skills {
       grid-template-columns: calc(100% - 14px);
